--- a/stylesheets/listen.css
+++ b/stylesheets/listen.css
@@ -1,8 +1,8 @@
-html {
+.listen-html {
   background: rgba(255, 255, 255, 1) url("../bg.jpg") center center fixed;
 }
 
-header {
+.listen-header {
   background-color: #eb7260;
   box-shadow: 0px 2px 2px 0px gray;
 }
@@ -46,7 +46,8 @@ header {
   background: rgba(188, 181, 181, 0.4);
   width: 80%;
   margin: 0 auto;
-  padding-bottom: 1em;
+  margin-top: 5em;
+  padding-bottom: 2em;
 }
 
 .listen-form {
@@ -63,17 +64,22 @@ header {
   height: 4em;
 }
 
+.checkboxes {
+  width: 100%;
+  margin-top: 2em;
+}
+
+.checkboxes div {
+  display: inline;
+}
+
 .checkbox {
   margin-top: 5em;
 }
 
-.checkbox input {
-  margin-right: 2em;
-}
-
 .btn-listen-pg {
   background-color: #FFFFFE;
-  margin-top: 5em;
+  margin-top: 3em;
   color: #eb7260;
   border: 1px solid #eb7260;
   width: 15em;
@@ -83,6 +89,11 @@ header {
 .btn-listen-pg:hover {
   color: #78c0a8;
   border: 1px solid #78c0a8;
+}
+
+.player-div {
+  z-index: 2000;
+  position: relative;
 }
 
 #down-icon {
@@ -99,7 +110,7 @@ header {
 }
 
 #audio-player  {
-  z-index: 1000;
+  z-index: 2000;
   display: inline-block;
   position: relative;
   float: left;
@@ -146,4 +157,21 @@ header {
 	border-radius: 50%;
 	margin-top: 1px;
 	background: rgba(0, 0, 0,1);
+}
+
+label.listen-options input {
+  display:none;
+}
+
+label.listen-options span {
+  cursor: pointer;
+  color: #eb7260;
+}
+
+label.listen-options span:hover {
+  color: #91ada9;
+}
+
+label.listen-options input:checked + span {
+  color: #91ada9;
 }
